add swagger docs for CreateUser handle
